test/link/no-large-constant.out
error: ROMX bank 0 does not exist (the minimum is 1)
    at no-large-constant.link(1)
Linking failed with 1 error
