test/link/no-large-constant.link
ROMX $ffff_ffff_ffff_ffff
	"test"
